# cgEngine

./: .gitignore  BuildSystem.md  CMakeLists.txt  README.md
extras/: sdl2-config.cmake
src/: CMakeLists.txt  SentinelConfig.h.in  main.cpp
src/hid/: CMakeLists.txt  InputManager.cpp  InputManager.h
src/rendering/: CMakeLists.txt  Window.cpp  Window.h
src/util/: CMakeLists.txt  IoManager.cpp  IoManager.h  MacroOverload.h
src/util/allocators/: CMakeLists.txt  DbFrameAllocator.cpp  DbFrameAllocator.h  MemoryPool.cpp  MemoryPool.h  MemoryStack.cpp  MemoryStack.h  StringId.cpp  StringId.h  ThreadPool.cpp  ThreadPool.h
src/util/config/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  SVar.cpp  SVar.h
src/util/error/: CMakeLists.txt  Logger.cpp  Logger.h  SentinelAssert.cpp  SentinelAssert.h
src/util/time/: CMakeLists.txt  Clock.cpp  Clock.h  Timer.cpp  Timer.h
tests/: AllocatorTest.cpp  CMakeLists.txt  ClockTest.cpp  ConfigManagerTest.cpp  IoManagerTest.cpp  LoggerTest.cpp  ThreadPoolTest.cpp
